# cosy-ai-pitch-loudness

./: .gitignore  README.md  pyproject.toml
laboratorium_ai_pitch_loudness/: __main__.py  db_calculations.py  main.py  pYIN_util.py
