[tool.poetry]
name = "laboratorium-ai-pitch-loudness"
version = "1.0.2"
description = ""
authors = ["Mathias Eulers <m.eulers@uni-luebeck.de>", "Finn Stoldt <f.stoldt@uni-luebeck.de>"]
readme = "README.md"
package-mode = true
packages = [{include = "laboratorium_ai_pitch_loudness"}]


[tool.poetry.dependencies]
python = "3.10.13"
numpy = "^1.26.4"
librosa = "^0.10.1"
matplotlib = "^3.8.4"

[tool.poetry.scripts]
main = "laboratorium_ai_pitch_loudness.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

